# telegram_board_games_bot

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
deploy/: telegram-board-games-bot-admin.service  telegram-board-games-bot-backup.service  telegram-board-games-bot-backup.timer  telegram-board-games-bot.service
docs/: optimization-plan.md  shared-postgresql.md
telegram_board_games_bot/: __init__.py  admin_repository.py  admin_web.py  backup.py  callbacks.py  chess_callbacks.py  commands.py  config.py  db.py  economy.py  global_matchmaking.py  i18n.py  inline.py  main.py  migrate_to_postgres.py  postgres.py  postgres_schema.py  runtime_lock.py  stats_views.py  telegram_retry.py
telegram_board_games_bot/admin_web_static/: app.js  index.html  styles.css
telegram_board_games_bot/games/: __init__.py  chess_game.py  chess_robot.py  draughts.py  robot.py
telegram_board_games_bot/render/: chess_board.py  text_board.py
tests/: test_admin_broadcast.py  test_admin_web.py  test_callbacks.py  test_chess.py  test_draughts.py  test_economy.py  test_global_matchmaking.py  test_i18n.py  test_operations.py  test_render_and_db.py  test_robot.py  test_stats_views.py  test_telegram_retry.py
