[project]
name = "telegram-board-games-bot"
version = "0.1.0b1"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0,<2",
    "python-telegram-bot[job-queue]>=21,<23",
    "chess>=1.11,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<10",
    "ruff>=0.11,<1",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["E731"]

[tool.setuptools.packages.find]
include = ["telegram_board_games_bot*"]
